# razor

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  notes.txt
cmake/: compile-options.cmake  dependencies.cmake  install-config.cmake  install-rules.cmake  options.cmake  warning-guard.cmake
include/passionfruit/: razor.hpp
include/razor/: context.hpp  razor.hpp  render_stack.hpp  renderer.hpp
src/: context.cpp  razor.cpp
tests/: CMakeLists.txt
tests/src/: razor_test.cpp
